[PE] Get rid of empty paint phase detection.

This caused issues in cases where we skip caches,
have special paint paths, and culling in the presence
of non-composited overflow clipping.

There are still optimizations for absence of paint
phases generally. This CL just removes ones where
we detect "empty" by means of no change to the
display list.

Bug: 898995, 901302

Change-Id: Ib3f79a615c88d0e97f4c9cec78056bf00e1358c6
Reviewed-on: https://chromium-review.googlesource.com/c/1320972
Commit-Queue: Chris Harrelson <chrishtr@chromium.org>
Reviewed-by: Xianzhu Wang <wangxianzhu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#606696}
Former-commit-id: 7f6f0f6a7cb3b0845cd39f930c17d4c915ed8c9b